--- a/forgot.html
+++ b/forgot.html
@@ -43,7 +43,7 @@
 						</div>
 					</div>
 					<div class="text-center mt-5 text-muted">
-						Copyright &copy; 2017-2021 &mdash; Your Company 
+						Copyright &copy; 2024 &mdash; Nexus Technologies Inc.
 					</div>
 				</div>
 			</div>
